Fix transform rendering issue on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -3,54 +3,46 @@ body {
 }
 /* Loader */
 #loader {
-    position: fixed;
-    height: 100%;
+    position: absolute;
+    height: 100vh;
     width: 100%;
     background-color: #0a0b0c;
+    overflow: hidden;
 }
 
 .slide-right {
     animation: slide-in 1s cubic-bezier(.5,.5,0,0), maintain-center .1s 1s linear, slide-right 1.5s 1.1s cubic-bezier(1,0,0,1);
-    transform: translateX(100%);
+    transform: translateX(75%);
 }
 
 .slide-left {
     animation: slide-in 1s cubic-bezier(.5,.5,0,0), maintain-center .1s 1s linear, slide-left 1.5s 1.1s cubic-bezier(1,0,0,1);
-    transform: translateX(-100%);
-}
-
-.keep-at-center {
-    transform: translateX(0%);
+    transform: translateX(-125%);
 }
 
 .init-right {
-    transform: translateX(25%);
+    transform: translateX(calc(100px - 25%));
 }
 
 .init-left {
-    transform: translateX(-25%);
-}
-
-.init-center {
-    transform: translateX(0%);
+    transform: translateX(calc(-100px - 25%));
 }
 
 #loader #right-panel {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-image: -webkit-linear-gradient(225deg, #0a0b0c 50.1%, rgba(0,0,0,0) 50.1%);
-    z-index: 1;
+    position: absolute;
+    height: 100vh;
+    width: 200%;
+    background: -webkit-linear-gradient(225deg, #0a0b0c 50.1%, rgba(0,0,0,0) 50.1%);
+    z-index: 2;
     opacity: 1;
-
 }
 
 #loader #left-panel {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-image: -webkit-linear-gradient(225deg, rgba(0,0,0,0) 49.9%, #0a0b0c 49.9%);
-    z-index: 1;
+    position: absolute;
+    height: 100vh;
+    width: 200%;
+    background: -webkit-linear-gradient(225deg, rgba(0,0,0,0) 49.9%, #0a0b0c 49.9%);
+    z-index: 2;
     opacity: 1;
 }
 
@@ -74,6 +66,7 @@ body {
     top: calc(50% - 44.5px);
     position: fixed;
     animation: load 1.5s infinite cubic-bezier(0,.5,.5,1) alternate;
+    z-index: 1;
 }
 
 @keyframes load {
@@ -87,31 +80,31 @@ body {
 
 @keyframes maintain-center {
     0% {
-        transform: translateX(0%);
+        transform: translateX(-25%);
     }
     100% {
-        transform: translateX(0%);
+        transform: translateX(-25%);
     }
 }
 
 @keyframes slide-right {
     0% {
-        transform: translateX(0%);
+        transform: translateX(-25%);
         opacity: 1;
     }
     100% {
-        transform: translateX(100%);
+        transform: translateX(75%);
         opacity: 1;
     }
 }
 
 @keyframes slide-left {
     0% {
-        transform: translateX(0%);
+        transform: translateX(-25%);
         opacity: 1;
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-125%);
         opacity: 1;
     }
 }
@@ -121,7 +114,7 @@ body {
         opacity: 1;
     }
     100% {
-        transform: translateX(0%);
+        transform: translateX(-25%);
         opacity: 1;
     }
 }
